# app/Models/User.php
@@ -24,6 +24,11 @@ class User extends Authenticatable implements JWTSubject
         'name',
         'email',
         'password',
+        'nickname',
+        'register',
+        'cpf',
+        'scale_id',
+        'role_id'
     ];
 
     /**
@@ -45,21 +50,39 @@ class User extends Authenticatable implements JWTSubject
         'email_verified_at' => 'datetime',
     ];
 
+    /**
+     * Returns the "hasOne" relationship between this model and the related model.
+     *
+     * @return \Illuminate\Database\Eloquent\Relations\HasOne
+     */
     public function role()
     {
         return $this->hasOne('App\Models\Role', 'id', 'role_id');
     }
 
+    /**
+     * Returns the "hasOne" relationship between this model and the related model.
+     *
+     * @return \Illuminate\Database\Eloquent\Relations\HasOne
+     */
     public function scale()
     {
         return $this->hasOne('App\Models\Scale', 'id', 'scale_id');
     }
 
+    /**
+     * Get the identifier that will be stored in the subject claim of the JWT.
+     * @return mixed
+     */
     public function getJWTIdentifier()
     {
         return $this->getKey();
     }
 
+    /**
+     * Return a key value array, containing any custom claims to be added to the JWT.
+     * @return array
+     */
     public function getJWTCustomClaims()
     {
         return [];
